# rust-discovery

f4discovery/: Cargo.toml  book.toml
f4discovery/chapters/.cargo/: config.toml
f4discovery/chapters/01-leds/auxiliary/: Cargo.toml
f4discovery/chapters/01-leds/auxiliary/src/: lib.rs
