[package]
authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Christopher J. McClellan <chris.mcclellan203@gmail.com>",
    "Wink Saville <wink@saville.com",
]
edition = "2018"
name = "aux5"
version = "0.2.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
panic-itm = "0.4.2"

[dependencies.stm32f429i-disc]
path = "../../../../../stm32f429i-disc"
# /home/alex/repso/rust-discovery/f4discovery/chapters/01-leds/auxiliary/Cargo.toml
# = "0.7.0"
